Se ha cambiado la paleta de colores y el ícono para darle una mejor estética.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Retrofit</string>
+    <string name="app_name">Retrofit-Pedro-Arriola-20188</string>
     <string name="us">US</string>
     <string name="co">CO</string>
     <string name="ca">CA</string>
